Made dropdown work correctly on IE

--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -50,7 +50,7 @@
 
     position: absolute;
     top: 100%;
-
+    left: 0;
     color: black;
     background-color: #EEEEEE;
     text-align: left;
@@ -131,6 +131,7 @@ nav>.content .navgroup {
   height: 100%;
   justify-content: center;
   flex-direction: column;
+  position: relative;
 }
 
 .socialmedia {
